Non-atomic applyOps command should not take out a global exclusive lock

XMLWordPrintableJSON

    • Fully Compatible
    • Repl 2017-07-31, Repl 2017-08-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The applyOps command currently takes out a global exclusive lock and applies operations serially. This limits the number of operations that can be applied due to the lack of concurrency. Having applyOps (when in non-atomic mode) not take out a global lock would allow us to parallelize applyOps calls and take advantage of collection- and document-level locking.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Steve Briskin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: