SERVER-29802 add applyOps 'allowAtomic' flag.

This flag supports non-atomic application of CRUD operations if set to false.
Defaults to true.

(cherry picked from commit e7de30308564cead80857592ed27d938f73a91f1)