src/mongo/db/catalog/apply_ops.cpp
@@ -32,6 +32,7 @@
 
 #include "mongo/db/catalog/apply_ops.h"
 
+#include "mongo/bson/util/bson_extract.h"
 #include "mongo/db/catalog/collection.h"
 #include "mongo/db/catalog/database.h"
 #include "mongo/db/catalog/database_holder.h"
@@ -56,7 +57,7 @@ namespace {
 /**
  * Return true iff the applyOpsCmd can be executed in a single WriteUnitOfWork.
  */
-bool canBeAtomic(const BSONObj& applyOpCmd) {
+bool _areOpsCrudOnly(const BSONObj& applyOpCmd) {
     for (const auto& elem : applyOpCmd.firstElement().Obj()) {
         const char* names[] = {"ns", "op"};
         BSONElement fields[2];
@@ -309,6 +310,12 @@ Status applyOps(OperationContext* opCtx,
                 const std::string& dbName,
                 const BSONObj& applyOpCmd,
                 BSONObjBuilder* result) {
+    bool allowAtomic = false;
+    uassertStatusOK(
+        bsonExtractBooleanFieldWithDefault(applyOpCmd, "allowAtomic", true, &allowAtomic));
+    auto areOpsCrudOnly = _areOpsCrudOnly(applyOpCmd);
+    auto isAtomic = allowAtomic && areOpsCrudOnly;
+
     ScopedTransaction scopedXact(opCtx, MODE_X);
     Lock::GlobalWrite globalWriteLock(opCtx->lockState());
 
@@ -325,7 +332,7 @@ Status applyOps(OperationContext* opCtx,
     }
 
     int numApplied = 0;
-    if (!canBeAtomic(applyOpCmd))
+    if (!isAtomic)
         return _applyOps(opCtx, dbName, applyOpCmd, result, &numApplied);
 
     // Perform write ops atomically
