jstests/noPassthrough/non_atomic_apply_ops_logging.js
@@ -58,5 +58,22 @@
     }));
     assert.eq(oplogColl.find({"o.renameCollection": {"$exists": true}}).count(), 2);
     assert.eq(oplogColl.find({"o.applyOps": {"$exists": true}}).count(), 1);
+
+    // Ensure that applyOps respects the 'allowAtomic' boolean flag on CRUD operations that it would
+    // have applied atomically.
+    assert.commandWorked(testDB.createCollection(testColl.getName()));
+    assert.commandFailedWithCode(testDB.runCommand({applyOps: [], allowAtomic: 'must be boolean'}),
+                                 ErrorCodes.TypeMismatch,
+                                 'allowAtomic flag must be a boolean.');
+    assert.commandWorked(testDB.runCommand({
+        applyOps: [
+            {op: "i", ns: testColl.getFullName(), o: {_id: 3, a: "augh"}},
+            {op: "i", ns: testColl.getFullName(), o: {_id: 4, a: "blah"}}
+        ],
+        allowAtomic: false,
+    }));
+    assert.eq(oplogColl.find({"o.applyOps": {"$exists": true}}).count(), 1);
+    assert.eq(oplogColl.find({"op": "i"}).count(), 2);
+
     rst.stopSet();
 })();
