jstests/replsets/libs/apply_ops_insert_write_conflict.js
@@ -36,14 +36,6 @@ var ApplyOpsInsertWriteConflictTest = function(options) {
             return {op: 'i', ns: t.getFullName(), o: {_id: i}};
         });
 
-        if (!options.atomic) {
-            // Adding a command to the list of operations to prevent the applyOps command from
-            // applying
-            // all the operations atomically.
-            ops.push({ns: "test.$cmd", op: "c", o: {applyOps: []}});
-            numOps++;
-        }
-
         // Probabilities for WCE are chosen based on empirical testing.
         // The probability for WCE during an atomic applyOps should be much smaller than that for
         // the non-atomic case because we have to attempt to re-apply the entire batch of 'numOps'
@@ -62,7 +54,7 @@ var ApplyOpsInsertWriteConflictTest = function(options) {
         var previousLogLevel =
             assert.commandWorked(primaryDB.setLogLevel(3, 'replication')).was.replication.verbosity;
 
-        var applyOpsResult = primaryDB.adminCommand({applyOps: ops});
+        var applyOpsResult = primaryDB.adminCommand({applyOps: ops, allowAtomic: options.atomic});
 
         // Reset log level.
         primaryDB.setLogLevel(previousLogLevel, 'replication');
